<resources>
    <string name="app_name">Ektfaa</string>
    <string name="map_api_key">AIzaSyAnjvMAJEmiAv3yeCDUXWv-PboXiT_uaoQ</string>
    <string name="search_key">AIzaSyAnjvMAJEmiAv3yeCDUXWv-PboXiT_uaoQ</string>
    <string name="choose_your_language">Choose Your Language</string>
    <string name="next">Next</string>
    <string name="choose_location">Choose Location</string>
    <string name="open">Open</string>
    <string name="close">Closed</string>
    <string name="productive_families">Store owner</string>
    <string name="chalets">Chalets</string>
    <string name="delegates">Delegates</string>
    <string name="show_results_for">Show results for</string>
    <string name="edit">Edit</string>
    <string name="area">Area</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="about_us">About App</string>
    <string name="language">Language</string>
    <string name="delivery_representative">Delivery Representative</string>
    <string name="search_for_delegete">Search For Delegete</string>
    <string name="no_data_show">No Data Show</string>
    <string name="ryal">ryal</string>
    <string name="detials">Details</string>
    <string name="specifications">Specifications</string>
    <string name="book_via_whatsapp">Book via WhatsApp</string>
    <string name="book_via_call">Book Via Call</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="locations">Locations</string>
    <string name="wait">Wait</string>
    <string name="failed">Failed</string>
    <string name="something">Check internet connection</string>
    <string name="field_required">Field Required</string>
    <string name="inv_email">Invalid Email</string>
    <string name="suc">Success!</string>
    <string name="we_ll_be_with_you_soon_we_haven_t_reached_your_area_just_yet">We\'ll be with you soon! we haven\'t reached your area just yet</string>
    <string name="select_location_manually">Select Location Manually</string>
    <string name="search_for_chalets">Search For Chalets</string>
    <string name="select_your_location">Select your location</string>
    <string name="confirm_address">Confirm location</string>
    <string name="start">Start</string>
    <string name="skip">Skip</string>
    <string name="welcome_in_ektfaa"><![CDATA[Welcome in <font color="#E6B400">Ektfaa</font>]]></string>
    <string name="get_discounts"><![CDATA[Get <font color="#E6B400">Discounts</font>]]></string>
    <string name="easy_comm"><![CDATA[Easy <font color="#E6B400">Communication</font>]]></string>
    <string name="we_deliver_order">We deliver your order to your site or wherever you choose</string>
    <string name="many_discount">You can get many discounts from a large number of our exclusive stores</string>
    <string name="delegate_contact">You can always contact the delegate while getting your order</string>
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="profile">profile</string>
    <string name="more">More</string>
    <string name="no_orders_to_show">No orders to show</string>
    <string name="order_num">Order num</string>
    <string name="total">Total</string>
    <string name="details">Details</string>
    <string name="current">Current</string>
    <string name="prev">Previous</string>
    <string name="create_your_store_now">Create your account now</string>
    <string name="continue1">Continue</string>
    <string name="city">City</string>
    <string name="add_ads">Add ads</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="rate_app">Rate app</string>
    <string name="search_for_productive_family">Search for productive family...</string>
    <string name="login">Login</string>
    <string name="phone">Phone number</string>
    <string name="confirmation_code">Confirmation Code</string>
    <string name="please_enter_code_sent_to">Please enter code sent to</string>
    <string name="resend">Resend</string>
    <string name="confirm">Confirm</string>
    <string name="register">Register</string>
    <string name="gallery">Gallery</string>

    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="select_your_success">Select your work</string>
    <string name="open_your_work">Open your work</string>
    <string name="ch_governorate">Choose governorate</string>
    <string name="ch_dept">Choose department</string>
    <string name="ch_sub_dept">Choose SubDepartment</string>
    <string name="ch_dates">Choose dates</string>
    <string name="ch_image">Choose image</string>
    <string name="ch_img_banner">Choose image banner</string>
    <string name="select">Select</string>
    <string name="department">Department</string>
    <string name="subdepartment">SubDepartment</string>
    <string name="location">Location</string>
    <string name="add2">Add</string>
    <string name="family_signup">Family signup</string>
    <string name="ch_car_type">Choose car type</string>
    <string name="car_type">Car type</string>
    <string name="delegate_signup">Delegate signup</string>
    <string name="day">Day</string>
    <string name="choose_your_package">Choose your package to enjoy and offer your services to millions of subscribers now</string>
    <string name="free">Free</string>
    <string name="subscribe_for_30_days_for_free">Subscribe for 30 days for free</string>
    <string name="subscribe">Subscribe</string>
    <string name="all">All</string>
    <string name="left_on_your_package">Left on your package</string>
    <string name="packages_and_subscriptions">Packages and subscriptions</string>
    <string name="add_product">Add products</string>
    <string name="add_department">Add department</string>
    <string name="department_name">Department name</string>
    <string name="products">Products</string>
    <string name="product_images">Product images</string>
    <string name="product_name">Product name</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="price">Price</string>
    <string name="add">Add</string>
    <string name="descriptions">Descriptions</string>
    <string name="add_property">Add property</string>
    <string name="example_additional_phone">Example:Additional phone</string>
    <string name="notifications">Notifications</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="advertise_images"> Advertise image</string>
    <string name="url">URL</string>
    <string name="time">Time</string>
    <string name="by_day">By day</string>
    <string name="pay">pay |</string>
    <string name="user_block">User is blocked</string>
    <string name="user">User</string>
    <string name="user_sign_up">User sign up</string>
    <string name="sign_up">Sign Up</string>
    <string name="update">Update</string>
    <string name="ch_area">Choose area</string>
    <string name="chalet_sign_up">Chalet sign up</string>
    <string name="edit_profile">Edit profile</string>
    <string name="logout">Logout</string>
    <string name="my_ads">My Ads</string>
    <string name="packages">Packages</string>
    <string name="delegate">Delegate</string>
    <string name="my_order">My order</string>
    <string name="status">Status</string>
    <string name="my_products">My products</string>
    <string name="busy">Busy</string>
    <string name="clear">Clear</string>
    <string name="filter">Filter</string>
    <string name="call">Call</string>
    <string name="send_order">Send order</string>
    <string name="order_by">Order by:</string>
    <string name="recently">Recently</string>
    <string name="nearest">Nearest</string>
    <string name="lowest_price">lowest price</string>
    <string name="highest_price">Highest price</string>
    <string name="oldest">Oldest</string>
    <string name="update_department">Update department</string>
    <string name="inv_offer">Invalid offer</string>
    <string name="price_after_discount">Price after discount</string>
    <string name="discount">Discount</string>
    <string name="discount_type">Discount type</string>
    <string name="add_offer">Add offer</string>
    <string name="percent">Percent</string>
    <string name="value">Value</string>
    <string name="at_least_photo">At least 1 photo</string>
    <string name="type_your_order_here">Type your order here...</string>
    <string name="order_type">Order type</string>
    <string name="family_order">Family order</string>
    <string name="normal_order">Normal order</string>
    <string name="pick_up_location">Pick up location</string>
    <string name="drop_off_location">Drop off location</string>
    <string name="location_name">Location name</string>
    <string name="si_su">Please sign in or sign up</string>
    <string name="my_location">My location</string>
    <string name="km">Km</string>
    <string name="new_order">New order</string>
    <string name="refused">Refused</string>
    <string name="less_offer">Less offer</string>
    <string name="new_offer">New offer</string>
    <string name="driver_at_client_loc">Driver delivered order</string>
    <string name="driver_rated">Driver was rated</string>
    <string name="refuse">Refuse</string>
    <string name="offer_price">Type delivery offer here...</string>
    <string name="offer_less">Offer less than</string>
    <string name="offer_must_less">Offer must be less than</string>
    <string name="pending_orders">Pending orders</string>
    <string name="new_orders">New orders</string>
    <string name="wait_offer">Waiting offer</string>
    <string name="wait_less_offer">Waiting less offer</string>
    <string name="another_driver">Another driver</string>
    <string name="no_driver_selected">No driver selected</string>
    <string name="wait_client_response">Waiting client response</string>
    <string name="accept_offer">Accept offer</string>
    <string name="offer_value">Offer value</string>
    <string name="delivery_cost">Delivery cost</string>
    <string name="current_order">Current order</string>
    <string name="previous_order">Previous order</string>
    <string name="filter_by">Filter by</string>
    <string name="ad_photo">Ad photo</string>
    <string name="ad_link">Ad link</string>
    <string name="ad_duration">Ad duration</string>
    <string name="per_day">Per Day</string>
    <string name="payment">Payment</string>
    <string name="ch_ad_photo">Choose ad photo</string>
    <string name="type_a_message">Type a message...</string>
    <string name="back">Back</string>
    <string name="cancel_order">Cancel order</string>
    <string name="share_location">Share location</string>
    <string name="cancel2">cancel</string>
    <string name="delete_order">Delete order ?</string>
    <string name="delete">Delete</string>
    <string name="getting_location">Getting location...</string>
    <string name="delivered">Delivered</string>
    <string name="order_canceled">Order canceled</string>
    <string name="order_delivered">Order delivered</string>
    <string name="att_sent">Attachment sent</string>
    <string name="no_notifications_to_show">No notifications to show</string>
    <string name="chalet_photos">Chalet photos</string>
    <string name="chalet_name">Chalet name</string>
    <string name="chalet_owner">Chalet owner</string>
    <string name="choose_area">Choose area</string>

</resources>