<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities_fragments.activity_filter_sub_category_area.FilterSubCategoryAreaActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:id="@+id/llOrder"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:text="@string/order_by"
                        />
                    <ImageView
                        android:id="@+id/arrow1"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_down_arrow"
                        android:padding="3dp"
                        />

                </LinearLayout>

                <net.cachapa.expandablelayout.ExpandableLayout
                    android:id="@+id/expandLayoutDepartment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:el_expanded="true"
                    app:el_duration="400"
                    app:el_parallax=".5"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    >
                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <RadioButton
                            android:id="@+id/rb1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/colorPrimary"
                            android:textColor="@color/black"
                            android:paddingStart="12dp"
                            android:paddingEnd="12dp"
                            android:textSize="14sp"
                            android:text="@string/recently"
                            />
                        <RadioButton
                            android:id="@+id/rb2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/colorPrimary"
                            android:textColor="@color/black"
                            android:paddingStart="12dp"
                            android:paddingEnd="12dp"
                            android:textSize="14sp"
                            android:text="@string/nearest"
                            />
                        <RadioButton
                            android:id="@+id/rb3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/colorPrimary"
                            android:textColor="@color/black"
                            android:paddingStart="12dp"
                            android:paddingEnd="12dp"
                            android:textSize="14sp"
                            android:layout_marginTop="8dp"
                            android:text="@string/lowest_price"
                            />


                        <RadioButton
                            android:id="@+id/rb4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/colorPrimary"
                            android:textColor="@color/black"
                            android:paddingStart="12dp"
                            android:paddingEnd="12dp"
                            android:textSize="14sp"
                            android:layout_marginTop="8dp"
                            android:text="@string/highest_price"
                            />
                    </RadioGroup>
                </net.cachapa.expandablelayout.ExpandableLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="16dp"
                    android:background="@color/gray10"
                    />

                <LinearLayout
                    android:id="@+id/llArea"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:text="@string/area"
                        />
                    <ImageView
                        android:id="@+id/arrow2"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_down_arrow"
                        android:padding="3dp"
                        />

                </LinearLayout>

                <net.cachapa.expandablelayout.ExpandableLayout
                    android:id="@+id/expandLayoutGovernorate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:el_expanded="false"
                    app:el_duration="400"
                    app:el_parallax=".5"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    >
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recViewGovernorate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </net.cachapa.expandablelayout.ExpandableLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="16dp"
                    android:background="@color/gray10"
                    />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/btnConfirm"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="@string/confirm"
                android:layout_margin="3dp"
                />

            <Button
                android:id="@+id/btnClear"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/small_stroke_primary"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:text="@string/clear"
                android:layout_margin="3dp"
                android:visibility="gone"
                />
        </LinearLayout>
    </LinearLayout>
</layout>
