<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities_fragments.activity_filter_sub_category_area.FilterSubCategoryAreaActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:text="@string/filter_by"
                    />
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    >
                    <RadioButton
                        android:id="@+id/rbRecently"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:text="@string/recently"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:button="@drawable/checkbok2"
                        app:buttonTint="@color/colorPrimary"
                        android:layout_marginTop="12dp"
                        />

                    <RadioButton
                        android:id="@+id/rbNear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:text="@string/nearest"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:button="@drawable/checkbok2"
                        app:buttonTint="@color/colorPrimary"
                        android:layout_marginTop="12dp"
                        />



                </RadioGroup>
                <LinearLayout
                    android:id="@+id/llCarType"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/car_type"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <ImageView
                        android:id="@+id/arrow1"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:padding="3dp"
                        android:src="@drawable/ic_down_arrow" />

                </LinearLayout>

                <net.cachapa.expandablelayout.ExpandableLayout
                    android:id="@+id/expandLayoutDepartment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:el_duration="400"
                    app:el_expanded="false"
                    app:el_parallax=".5">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recViewCarType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </net.cachapa.expandablelayout.ExpandableLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="16dp"
                    android:background="@color/gray10" />

                <LinearLayout
                    android:id="@+id/llArea"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/area"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <ImageView
                        android:id="@+id/arrow2"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:padding="3dp"
                        android:src="@drawable/ic_down_arrow" />

                </LinearLayout>

                <net.cachapa.expandablelayout.ExpandableLayout
                    android:id="@+id/expandLayoutGovernorate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:el_duration="400"
                    app:el_expanded="false"
                    app:el_parallax=".5">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recViewGovernorate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </net.cachapa.expandablelayout.ExpandableLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="16dp"
                    android:background="@color/gray10" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnConfirm"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnClear"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/small_stroke_primary"
                android:text="@string/clear"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</layout>
